--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,12 +2,15 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      Title="MainWindow"
+                      Title="NESPTI"
                       Height="600"
-                      Width="800">
+                      Width="800" WindowTitleBrush="Black" Background="Black" TitleForeground="White" Foreground="White">
     <Grid>
-
-        <!-- your content -->
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="129*"/>
+            <ColumnDefinition Width="665*"/>
+        </Grid.ColumnDefinitions>
+        <Button Content="Open NES" HorizontalAlignment="Left" Margin="19,18,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource AccentedSquareButtonStyle}" BorderBrush="{x:Null}" TextOptions.TextHintingMode="Animated" Controls:ControlsHelper.ContentCharacterCasing="Normal" Click="Button_Click"/>
+        <TextBox x:Name="nesTextBox" TextWrapping="Wrap" Text="Select a file." Grid.Column="1"/>
     </Grid>
 </Controls:MetroWindow>
