--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,6 +2,8 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:nespti="clr-namespace:NESPTI"
+                      xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                       Title="NESPTI"
                       Height="600"
                       Width="800" WindowTitleBrush="Black" Background="Black" TitleForeground="White" Foreground="White">
@@ -13,4 +15,16 @@
         <Button Content="Open NES" HorizontalAlignment="Left" Margin="19,18,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource AccentedSquareButtonStyle}" BorderBrush="{x:Null}" TextOptions.TextHintingMode="Animated" Controls:ControlsHelper.ContentCharacterCasing="Normal" Click="Button_Click"/>
         <TextBox x:Name="nesTextBox" TextWrapping="Wrap" Text="Select a file." Grid.Column="1"/>
     </Grid>
+
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Name="SettingsButton" Click="SettingsButton_OnClick">
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconModern Width="14" Height="14" Kind="Settings" />
+                    <TextBlock Margin="4 0 0 0" VerticalAlignment="Center" Text="Folder Path" />
+                </StackPanel>
+            </Button>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
+
 </Controls:MetroWindow>
